# wechat-cli

./: README.md  README_CN.md  pyproject.toml
.omc/state/: agent-replay-d5a51d3b-7404-4aeb-9785-71231a9b1e33.jsonl
docs/plans/: 2026-04-10-agent-friendly-media-design.md
wechat_cli/commands/: history.py  sessions.py
wechat_cli/core/: contacts.py  crypto.py  db_cache.py  messages.py  voice.py
